# elbow_fracture_cv

./: .gitignore  README.md  pyproject.toml
backend/: main.py
checkpoints/: README.md
docs/: literature_landscape_and_outline.md  manuscript_outline.md  manuscript_outline_RadiologyAI_format.md
elbow-grader-ui/: README.md  next.config.mjs  package-lock.json  package.json
elbow-grader-ui/app/: layout.tsx  page.tsx
elbow-grader-ui/app/api/predict/: route.ts
elbow-grader-ui/components/: FileUploader.tsx  ResultsBanner.tsx  Sidebar.tsx
elbow-grader-ui/components/tabs/: AuditTab.tsx  BaumannTab.tsx  CorticalWidthTab.tsx  GeometricTab.tsx  PerExperimentTab.tsx  RegressorBaumannTab.tsx  SummaryTab.tsx
elbow-grader-ui/components/ui/: badge.tsx  button.tsx
elbow-grader-ui/lib/: types.ts
elbow_grader/: __init__.py  __main__.py  _viz.py  config.py  grader.py  results.py
pipeline/: __init__.py  _canonical_align.py  baumann.py  baumann_regressor.py  capitellum.py  classifiers.py  config.py  geometry.py  gradcam.py  ood.py  pipeline.py  preprocessing.py  segmentation.py  test_pipeline.py  utils.py
