[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elbow-grader"
version = "0.1.0"
description = "Gartland classification pipeline for paediatric supracondylar elbow fractures"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "opencv-python>=4.7",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "pandas>=2.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
app = ["streamlit>=1.30"]

[project.scripts]
elbow-grader = "elbow_grader.__main__:main"

[tool.setuptools.packages.find]
# Installs both the public package and the internal pipeline package.
include = ["elbow_grader*", "pipeline*"]
